Spacing issues in Ipad - fixed featured area to be more responsive - About us section width fix

--- a/wp-content/themes/hestia/style.css
+++ b/wp-content/themes/hestia/style.css
@@ -1055,6 +1055,7 @@ margin-left: 15px;
   text-align: left !important;
   margin-top: 10px;
   padding: 0px 0;
+  width: 100%
 }
 .fullscreen {
   height: 90vh;
